--- a/Snack_game/index.html
+++ b/Snack_game/index.html
@@ -20,11 +20,8 @@
         }
         h1 {
             color: rgb(175, 248, 7);
-            margin-bottom: 2.5rem;
-        }
-        canvas {
-            border: 3px solid rgb(232, 9, 146);
-        }
+            margin-bottom: 2.5rem;}
+        canvas {border: 3px solid rgb(232, 9, 146);}
     </style>
 </head>  
 <body>
